--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -8,3 +8,42 @@ footer{
   color: #fff;
 }
 
+
+table{
+ /* box-shadow: 0px 2px 18px 0px rgba(0,0,0,0.5); */
+}
+
+th{
+  background-color: #4c60cf;
+  color: white;
+}
+
+table th:first-child,table td:first-child{
+  border-radius:10px 0 0 10px;
+}
+
+table th:last-child,table td:last-child{
+  border-radius:0 10px 10px 0;
+}
+
+.table th, .table td {
+  border-top: none;
+}
+
+#block-buddy-bt4-page-title{
+
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.view-at-catalogue .views-row{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 2px solid black;
+
+}
+
+.overview-button{
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
