--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -47,3 +47,21 @@ table th:last-child,table td:last-child{
   margin-right: 20px;
   margin-bottom: 20px;
 }
+
+
+/* Header */
+
+header{
+
+  font-size: 1.5rem;
+}
+
+/* MAIN */
+
+main{
+  font-size: 1.5rem;
+}
+
+
+
+/*FOOTER */
