^Buddy Backend Theme

--- a/web/themes/custom/buddy_backend_bt4/css/custom.css
+++ b/web/themes/custom/buddy_backend_bt4/css/custom.css
@@ -1,10 +1,10 @@
 footer{
-  background-color: #343a40;
+  background-color: #e6ff90;
   color: #fff;
 }
 
 .navbar {
-  background-color: #343a40;
+  background-color: #e6ff90;
   color: #fff;
 }
 
