--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -47,3 +47,18 @@ table th:last-child,table td:last-child{
   margin-right: 20px;
   margin-bottom: 20px;
 }
+
+#user-entry-social-auth {
+  width: 100%;
+  display: block;
+}
+
+.auth-option {
+  float: left;
+  margin: 10px;
+}
+
+.auth-option img {
+  max-width: 120px;
+  max-height: 120px;
+}
