^preference form start

--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -152,3 +152,9 @@ footer{
 .buddy_ec_logo{
   text-align: right;
 }
+
+@media (max-width: 991px) {
+  .navbar-expand .navbar-nav {
+    flex-direction: column;
+  }
+}
