--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -180,6 +180,10 @@ footer{
   margin: 10px 0;
 }
 
+.block-system-breadcrumb-block {
+  top: 35px;
+}
+
 @media (min-width: 992px) {
   #block-dropdownlanguage fieldset {
     margin-left: 8px;
