^preference form start

--- a/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
+++ b/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
@@ -74,6 +74,8 @@ set footer_classes = ' ' ~
         </button>
       </div>
 
+    </div>
+    <div class="{{ b4_top_container }} row mx-auto">
       <div class="collapse navbar-collapse col-12 col-md-auto p-0 justify-content-end" id="navbarSupportedContent">
         {{ page.nav_main }}
         {{ page.nav_additional }}
