--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -1,5 +1,7 @@
 /* General */
-
+.at_container{
+  margin-bottom: 50px;
+}
 .button:first-child, .image-button:first-child {
   margin-right: 1em;
   margin-left: 1em;
