--- a/web/themes/custom/buddy_bt4/templates/form/input.html.twig
+++ b/web/themes/custom/buddy_bt4/templates/form/input.html.twig
@@ -11,7 +11,11 @@
  */
 #}
 {% if attributes.hasClass('button') and attributes.hasClass('buddy-icon-button') %}
-<button{{ attributes.addClass('btn btn-primary') }} >{{ attributes.value }}<i class="fas {{ attributes.icon }}"></i></button>
+  {% if attributes.hasClass('buddy-icon-before') %}
+    <button{{ attributes.addClass('btn btn-primary') }} ><i class="fas {{ attributes.icon }}"></i>{{ attributes.value }}</button>
+  {% else %}
+    <button{{ attributes.addClass('btn btn-primary') }} >{{ attributes.value }}<i class="fas {{ attributes.icon }}"></i></button>
+  {% endif %}
 {% elseif attributes.hasClass('button') and not attributes.hasClass('field-add-more-submit') %}
   <input{{ attributes.addClass('btn btn-primary') }} />
 {% else %}
