--- a/web/modules/buddy/css/user-profile.css
+++ b/web/modules/buddy/css/user-profile.css
@@ -31,3 +31,19 @@
   height: 100% !important;
   background-color: #989898 !important;
 }
+
+.ajax-progress {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+}
+/*
+.ajax-throbber {
+  left: 0;
+  position:absolute;
+  right:0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+*/
