--- a/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
+++ b/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
@@ -42,46 +42,39 @@
  * @see html.html.twig
  */
 #}
-{%
-set nav_classes = 'navbar navbar-expand-lg' ~
+{% set nav_classes = 'navbar navbar-expand-lg' ~
   (b4_navbar_schema != 'none' ? " navbar-#{b4_navbar_schema}" : ' ') ~
   (b4_navbar_schema != 'none' ? (b4_navbar_schema == 'dark' ? ' text-light' : ' text-dark' ) : ' ') ~
-  (b4_navbar_bg_schema != 'none' ? " bg-#{b4_navbar_bg_schema}" : ' ')
-%}
+  (b4_navbar_bg_schema != 'none' ? " bg-#{b4_navbar_bg_schema}" : ' ') %}
 
-{%
-set footer_classes = ' ' ~
+{% set footer_classes = ' ' ~
   (b4_footer_schema != 'none' ? " footer-#{b4_footer_schema}" : ' ') ~
   (b4_footer_schema != 'none' ? (b4_footer_schema == 'dark' ? ' text-light' : ' text-dark' ) : ' ') ~
-  (b4_footer_bg_schema != 'none' ? " bg-#{b4_footer_bg_schema}" : ' ')
-%}
-
+  (b4_footer_bg_schema != 'none' ? " bg-#{b4_footer_bg_schema}" : ' ') %}
 <header>
   {{ page.header }}
-
   {% if page.nav_branding or page.nav_main or page.nav_additional %}
-  <nav class="{{ nav_classes }}">
-    <div class="{{ b4_top_container }} row mx-auto">
-      <div class="col-auto p-0">
-      {{ page.nav_branding }}
-      </div>
+    <nav class="{{ nav_classes }}">
+      <div class="{{ b4_top_container }} row mx-auto">
+        <div class="col-2 col-md-auto p-0">
+          {{ page.nav_branding }}
+        </div>
+        <div class="col-2 col-md-auto p-0 text-right">
+          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                  aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            Menu
+          </button>
+        </div>
+        <div class="collapse navbar-collapse col-10 col-md-auto p-0 justify-content-end" id="navbarSupportedContent">
+          {{ page.nav_main }}
+          {{ page.nav_additional }}
+        </div>
 
-      <div class="col-3 col-md-auto p-0 text-right">
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
 
-    </div>
-    <div class="{{ b4_top_container }} row mx-auto">
-      <div class="collapse navbar-collapse col-12 col-md-auto p-0 justify-content-end" id="navbarSupportedContent">
-        {{ page.nav_main }}
-        {{ page.nav_additional }}
       </div>
-    </div>
-  </nav>
+    </nav>
   {% endif %}
 
 </header>
@@ -89,17 +82,11 @@ set footer_classes = ' ' ~
 <main role="main">
   <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
-  {%
-  set sidebar_first_classes = (page.sidebar_first and page.sidebar_second) ? 'col-12 col-sm-6 col-lg-3' : 'col-12 col-lg-3'
-  %}
+  {% set sidebar_first_classes = (page.sidebar_first and page.sidebar_second) ? 'col-12 col-sm-6 col-lg-3' : 'col-12 col-lg-3' %}
 
-  {%
-  set sidebar_second_classes = (page.sidebar_first and page.sidebar_second) ? 'col-12 col-sm-6 col-lg-3' : 'col-12 col-lg-3'
-  %}
+  {% set sidebar_second_classes = (page.sidebar_first and page.sidebar_second) ? 'col-12 col-sm-6 col-lg-3' : 'col-12 col-lg-3' %}
 
-  {%
-  set content_classes = (page.sidebar_first and page.sidebar_second) ? 'col-12 col-lg-6' : ((page.sidebar_first or page.sidebar_second) ? 'col-12 col-lg-9' : 'col-12' )
-   %}
+  {% set content_classes = (page.sidebar_first and page.sidebar_second) ? 'col-12 col-lg-6' : ((page.sidebar_first or page.sidebar_second) ? 'col-12 col-lg-9' : 'col-12' ) %}
 
 
   <div class="{{ b4_top_container }}">
@@ -123,12 +110,14 @@ set footer_classes = ' ' ~
     </div>
   </div>
 
+
+  <div class="buddy_bg"></div>
 </main>
 
 {% if page.footer %}
-<footer class="mt-auto {{ footer_classes }}">
-  <div class="{{ b4_top_container }}">
-    {{ page.footer }}
-  </div>
-</footer>
+  <footer class="mt-auto {{ footer_classes }}">
+    <div class="{{ b4_top_container }}">
+      {{ page.footer }}
+    </div>
+  </footer>
 {% endif %}
