^started new theme

--- a/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
+++ b/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
@@ -59,11 +59,15 @@
         <div class="col-2 col-md-auto p-0">
           {{ page.nav_branding }}
         </div>
-        <div class="col-2 col-md-auto p-0 text-right">
+        <div class="col-8 col-md-auto p-0 text-right">
+          <button class="navbar-toggler collapsed" type="button">
+            <span class="search-icon"></span><br>
+            Search
+          </button>
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                   data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                   aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span><br>
             Menu
           </button>
         </div>
