--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -16,11 +16,11 @@
 }
 
 .buddy_link_button_social_auth{
-  width: 400px;
+  width: 380px;
   border-radius: 120px;
   display: inline-block;
   text-decoration: none;
-  text-align: center;
+  text-align: left;
   padding: 10px;
   margin: 20px 0;
   font-weight: 700;
@@ -38,7 +38,9 @@
 .auth-option img {
   max-width: 40px;
   max-height: 40px;
+  margin-left: 15px;
   margin-right: 15px;
+
 }
 .buddy_small_link_button{
   width: 150px;
@@ -252,7 +254,7 @@ Langauge Switcher
 main {
   font-size: 1.5rem;
   margin-bottom: 50px;
-  min-height: 400px;
+  min-height: 500px;
 }
 
 hr {
@@ -319,11 +321,14 @@ th.views-field{
 
 
 /*FOOTER */
-
+footer.mt-auto{
+  margin-top: -150px !important;
+}
 footer{
   background-size: cover !important;
   background: url(../assets/svg/buddy_mobile_bg.svg) no-repeat;
   min-height: 450px;
+
 
 }
 .buddy_footer_menu{
