--- a/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
+++ b/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
@@ -60,7 +60,7 @@
           {{ page.nav_branding }}
         </div>
         <div class="col-8 col-md-auto p-0 text-right">
-          <button class="navbar-toggler collapsed" type="button">
+          <button class="navbar-toggler collapsed" type="button" id="search_button_mobile">
             <span class="search-icon"></span><br>
             Search
           </button>
