--- a/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
+++ b/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
@@ -61,7 +61,7 @@
         </div>
         <div class="col-8 col-md-auto p-0 text-right">
           <button class="navbar-toggler collapsed" type="button" id="search_button_mobile">
-            <span class="search-icon"></span><br>
+            <span class="navbar-toggler-icon search-icon"></span><br>
             Search
           </button>
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
