--- a/web/modules/buddy/css/rating-widget.css
+++ b/web/modules/buddy/css/rating-widget.css
@@ -1,3 +1,14 @@
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
 #star_rating svg {
   width: 1em;
   height: 1em;
