--- a/web/modules/buddy/css/rating-widget.css
+++ b/web/modules/buddy/css/rating-widget.css
@@ -9,17 +9,16 @@
   width: 1px;
 }
 
-#star_rating svg {
+.star_rating svg {
   width: 1em;
   height: 1em;
   fill: currentColor;
   stroke: currentColor;
 }
-#star_rating label, #star_rating output {
+.star_rating label, .star_rating output {
   display: block;
   float: left;
   font-size: 2em;
-  height: 1.2em;
   color: #036;
   cursor: pointer;
   /* Transparent border-bottom avoids jumping
@@ -27,35 +26,51 @@
      on :hover/:focus */
   border-bottom: 2px solid transparent;
 }
-#star_rating output {
+
+.rating-form-container form {
+  width: 290px;
+}
+
+.rating-output {
+  min-width: 235px;
+}
+
+@media (min-width: 870px) {
+  .rating-output {
+    margin-top: 1em;
+    padding-left: 1em;
+  }
+}
+
+.star_rating output {
   font-size: 1.5em;
   padding: 0 1em;
 }
-#star_rating input:checked ~ label {
+.star_rating input:checked ~ label {
   color: #999;
 }
-#star_rating input:checked + label {
+.star_rating input:checked + label {
   color: #036;
   border-bottom-color: #036;
 }
-#star_rating input:focus + label {
+.star_rating input:focus + label {
   border-bottom-style: dotted;
 }
-#star_rating:hover input + label {
+.star_rating:hover input + label {
   color: #036;
 }
-#star_rating input:hover ~ label,
-#star_rating input:focus ~ label,
-#star_rating input[id="star0"] + label {
+.star_rating input:hover ~ label,
+.star_rating input:focus ~ label,
+.star_rating input[class="star_cancel"] + label {
   color: #999;
 }
-#star_rating input:hover + label,
-#star_rating input:focus + label {
+.star_rating input:hover + label,
+.star_rating input:focus + label {
   color: #036;
 }
-#star_rating input[id="star0"]:checked + label {
+.star_rating input[class="star_cancel"]:checked + label {
   color: #ff2d21;
 }
-#star_rating [type="submit"] {
+.star_rating [type="submit"] {
   float: none;
 }
