--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -554,7 +554,7 @@ AT INSTall
   border: 10px solid #E5E3F0;
   margin-bottom: 10px;
   border-radius: 30px;
-  background: #E5E3F0;
+  background: white;
   padding: 20px 20px 0px 20px;
 }
 
