--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -609,8 +609,13 @@ AT ENTRIES AT MODERATOR
   padding-left: 30px;
 }
 
+/*
+Profile
+ */
 
-
+.profile_container{
+  margin-top: 30px;
+}
 /*FOOTER */
 footer.mt-auto{
   border-top: 10px solid #080866;
