--- a/web/modules/buddy/css/user-profile.css
+++ b/web/modules/buddy/css/user-profile.css
@@ -1,3 +1,8 @@
+#profile-progress-bar{
+  height: 36px;
+
+}
+
 #user-entry-form-wrapper .form-type-radio{
   display: inline;
   margin-right: 20px;
@@ -13,7 +18,14 @@
 }
 
 .buddy-user-profile-category-container{
-  min-height: 400px;
+  margin-top: 20px;
+
+}
+.buddy-category-image img{
+  max-height: 100%;
+  max-width: 100%;
+  height: 250px;
+  object-fit: contain;
 }
 /*
 #user-entry-form-wrapper{
@@ -21,11 +33,11 @@
   position: relative;
 }
 
-.buddy-user-profile-navigation{
-  position: absolute;
-  bottom: 0px;
-}
 */
+.buddy-user-profile-navigation{
+  text-align: center;
+}
+
 
 .progress{
   height: 100% !important;
