--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -73,6 +73,34 @@
   background: #080866;
   color: white;
 }
+.buddy_menu_button{
+  min-width: 200px;
+  border-radius: 15px;
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  padding: 10px;
+  margin: 20px 0;
+  font-weight: 700;
+}
+
+.buddy_invert_button{
+  background: white;
+  color: #080866;
+  border: 3px solid #080866;
+}
+.buddy_invert_button:hover,.buddy_invert_button:focus{
+  background: #080866;
+  color: white;
+  border: 3px solid #080866;
+}
+
+
+.buddy_invert_button:disabled,.buddy_invert_button:disabled:hover  {
+  color: #fff !important;
+  background-color: #A20784 !important;
+  border-color: #A20784 !important;
+}
 .create_account_button:hover, .create_account_button:focus, .buddy_button:hover, .buddy_button:focus,.buddy-icon-button:hover,.buddy-icon-button:focus{
   background: #BA0096;
   color: white;
@@ -347,7 +375,7 @@ main{
  /* background-size: cover !important; */
   /* background: url(../assets/svg/buddy_mobile_bg.svg) no-repeat; */
   background-image: url(../assets/svg/buddy_bg.svg);
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   background-repeat:no-repeat;
   background-size:100%;
   background-position: center bottom;
