--- a/web/modules/buddy/css/user-profile.css
+++ b/web/modules/buddy/css/user-profile.css
@@ -1,3 +1,6 @@
+legend{
+  margin: 10px 0 !important;
+}
 #profile-progress-bar{
   height: 36px;
 
@@ -9,9 +12,6 @@
 }
 
 
-.buddy-icon-button{
-  font-size: 28px !important;
-}
 .buddy-icon-button>svg{
   margin-left: 10px;
   margin-right: 10px;
